--- a/test.html
+++ b/test.html
@@ -82,7 +82,7 @@
         <!-- inject:jpg -->
         <figure class="pure-u-1 pure-u-md-1-3">
 <a href="i/dst/batman-lg.jpg" data-size="1920x2560">
-<img class="pure-img" srcset="i/dst/batman-sm.jpg 480w, i/dst/batman-md.jpg 960w, i/dst/batman-lg.jpg 1920w" alt="Batman" >
+<img class="pure-img" srcset="i/dst/batman-sm.jpg 480w, i/dst/batman-md.jpg 960w, i/dst/batman-lg.jpg 1920w" src="i/dst/batman-md.jpg" alt="Batman" >
 <span class="overlay"></span>
 <span class="caption">Batman</span>
 </a>
@@ -91,7 +91,7 @@
 
         <figure class="pure-u-1 pure-u-md-1-3">
 <a href="i/dst/ben-lg.jpg" data-size="1920x2560">
-<img class="pure-img" srcset="i/dst/ben-sm.jpg 480w, i/dst/ben-md.jpg 960w, i/dst/ben-lg.jpg 1920w" alt="Ben Howard" >
+<img class="pure-img" srcset="i/dst/ben-sm.jpg 480w, i/dst/ben-md.jpg 960w, i/dst/ben-lg.jpg 1920w" src="i/dst/ben-md.jpg" alt="Ben Howard" >
 <span class="overlay"></span>
 <span class="caption">Ben Howard</span>
 </a>
@@ -100,7 +100,7 @@
 
         <figure class="pure-u-1 pure-u-md-1-3">
 <a href="i/dst/hugh-lg.jpg" data-size="1920x2560">
-<img class="pure-img" srcset="i/dst/hugh-sm.jpg 480w, i/dst/hugh-md.jpg 960w, i/dst/hugh-lg.jpg 1920w" alt="Wolverine" >
+<img class="pure-img" srcset="i/dst/hugh-sm.jpg 480w, i/dst/hugh-md.jpg 960w, i/dst/hugh-lg.jpg 1920w" src="i/dst/hugh-md.jpg" alt="Wolverine" >
 <span class="overlay"></span>
 <span class="caption">Wolverine</span>
 </a>
@@ -109,7 +109,7 @@
 
         <figure class="pure-u-1 pure-u-md-1-3">
 <a href="i/dst/iron-lg.jpg" data-size="1920x2560">
-<img class="pure-img" srcset="i/dst/iron-sm.jpg 480w, i/dst/iron-md.jpg 960w, i/dst/iron-lg.jpg 1920w" alt="Iron Man" >
+<img class="pure-img" srcset="i/dst/iron-sm.jpg 480w, i/dst/iron-md.jpg 960w, i/dst/iron-lg.jpg 1920w" src="i/dst/iron-md.jpg" alt="Iron Man" >
 <span class="overlay"></span>
 <span class="caption">Iron Man</span>
 </a>
@@ -118,7 +118,7 @@
 
         <figure class="pure-u-1 pure-u-md-1-3">
 <a href="i/dst/thth-lg.jpg" data-size="1920x1920">
-<img class="pure-img" srcset="i/dst/thth-sm.jpg 480w, i/dst/thth-md.jpg 960w, i/dst/thth-lg.jpg 1920w" alt="The Head and the Heart" >
+<img class="pure-img" srcset="i/dst/thth-sm.jpg 480w, i/dst/thth-md.jpg 960w, i/dst/thth-lg.jpg 1920w" src="i/dst/thth-md.jpg" alt="The Head and the Heart" >
 <span class="overlay"></span>
 <span class="caption">The Head and the Heart</span>
 </a>
@@ -127,7 +127,7 @@
 
         <figure class="pure-u-1 pure-u-md-1-3">
 <a href="i/dst/watson-lg.jpg" data-size="1920x2560">
-<img class="pure-img" srcset="i/dst/watson-sm.jpg 480w, i/dst/watson-md.jpg 960w, i/dst/watson-lg.jpg 1920w" alt="Patrick Watson" >
+<img class="pure-img" srcset="i/dst/watson-sm.jpg 480w, i/dst/watson-md.jpg 960w, i/dst/watson-lg.jpg 1920w" src="i/dst/watson-md.jpg" alt="Patrick Watson" >
 <span class="overlay"></span>
 <span class="caption">Patrick Watson</span>
 </a>
